[package]
name = "byteloaf"
version = "0.2.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"
description = "Use a heap-allocated byte buffer (a 'loaf') via independently owned, accessed, and moved slices."
repository = "https://github.com/sirkibsirkib/byteloaf/"
readme = "README.md"
keywords = ["buffer", "ownership", "sharing", "slice", "byte"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
